--- a/index.html
+++ b/index.html
@@ -27,18 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <center>
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniY.gif" width="80px" height="100px" />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniO.gif" width="80px" height="100px" />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniL.gif" width="80px" height="100px" />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniO.gif" width="80px" height="100px" />
-            <br />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniN.gif" width="80px" height="100px" />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniI.gif" width="80px" height="100px" />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniN.gif" width="80px" height="100px" />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniJ.gif" width="80px" height="100px" />
-            <img style="border:0px;box-shadow:0px 0px 0px" src="https://7chan.org/res/aniA.gif" width="80px" height="100px" />
-            </center>
+            <h1>Yolo-ninja</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
