--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 <img src="images/2015-02-23_23.16.13.png" />
 
 <h3>
-<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Extra Information</h3>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pack Information</h3>
 
-<p>We plan on having a small wiki with 'vital information' and helpful links later.<br />The main repository holds all of the configuration files and tweaks, so you can see exactly what we're doing to the pack.</p>
+<p>We plan on having a small wiki with 'vital information' and helpful links later.<br />The Github repository holds all of the configuration files and tweaks, so you can see exactly what we're doing to the pack.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a> </h3>
 
-<p>The current pack authors are Cerdra (<a href="https://github.com/cerdra" class="user-mention">@cerdra</a>), and Gyro (<a href="https://github.com/notgyro" class="user-mention">@NotGyro</a>).<p>Credits go to Bedaufadaunk et al for contributing.</p><p>And Github suggested the name.</p>
+<p>The current pack authors are Cerdra (<a href="https://github.com/cerdra" class="user-mention">@cerdra</a>), Gyro (<a href="https://github.com/notgyro" class="user-mention">@NotGyro</a>), DoctorrWiggles (<a href="https://github.com/doctorwiggles" class="user-mention">@DrWiggles</a>), and Flap (<a href="https://github.com/zeflap" class="user-mention">@zeflap</a>), and a couple others.<p>Credits go to various people for involuntarily contributing.</p><p>And Github suggested the name.</p>
 <br />
 <p>Any suggestions, comments, or questions?<br />Send it to <a href="mailto:cerdra@gmail.com">cerdra@gmail.com</a> with an appropriate subject line.</p>
       </section>
@@ -67,7 +67,7 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/cerdra">cerdra</a> can be found on <a href="https://github.com/cerdra/yolo-ninja">GitHub</a></p>
+            <p>this project by The Meme Team&#8482; can be found on <a href="https://github.com/cerdra/yolo-ninja">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
