add emphasis to multimc

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://www.dropbox.com/s/vjvvt50lm6nthc0/Yolo-ninja%200.4.0.zip?dl=0" class="zip"><em>download</em> .ZIP v0.4.0 for MultiMC5</a><a href="https://github.com/cerdra/yolo-ninja" class="tgz"><em>view on</em>☁ Github</a>
+          <a href="https://www.dropbox.com/s/vjvvt50lm6nthc0/Yolo-ninja%200.4.0.zip?dl=0" class="zip"><em>download .ZIP v0.4.0</em>for MultiMC5</a><a href="https://github.com/cerdra/yolo-ninja" class="tgz"><em>view on</em>☁ Github</a>
         </span>
       </section>
 
