update pack version again

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://www.dropbox.com/s/vjvvt50lm6nthc0/Yolo-ninja%200.4.0.zip?dl=0" class="zip"><em>download .ZIP v0.4.0</em>for MultiMC5</a><a href="https://github.com/cerdra/yolo-ninja" class="tgz"><em>view on</em>☁ Github</a>
+          <a href="https://www.dropbox.com/s/wcn0m76glnjjmq6/Yolo-ninja%200.4.1.zip?dl=0" class="zip"><em>download .ZIP v0.4.1</em>for MultiMC5</a><a href="http://protect.moe/mcglauncher/" class="tgz"><em>also available on</em>MCGLauncher</a>
         </span>
       </section>
 
@@ -52,7 +52,7 @@
 <h3>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pack Information</h3>
 
-<p><center><strong><a href="https://github.com/cerdra/yolo-ninja/blob/master/modlist.md">Modlist</a> • <a href="https://github.com/cerdra/yolo-ninja/blob/master/changelog.md">Changelog</a></strong></center></p><p>The server is located at <strong><em>cerd.noip.me</em></strong>. It's included in the pack's multiplayer list by default.</p>
+<p><center><strong><a href="https://github.com/cerdra/yolo-ninja/blob/master/modlist.md">Modlist</a> • <a href="https://github.com/cerdra/yolo-ninja/blob/master/changelog.md">Changelog</a></strong></center></p><p>The pack is also available via the MCGLauncher, a custom launcher maintained by Chen, based off the SNKLauncher.</p><p>The server is located at <strong><em>cerd.noip.me</em></strong>. It's included in the pack's multiplayer list by default.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a> </h3>
