--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <h3>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pack Information</h3>
 
-<p><center><strong><a href="https://github.com/cerdra/yolo-ninja/blob/master/modlist.md">Modlist</a> • <a href="https://github.com/cerdra/yolo-ninja/blob/master/changelog.md">Changelog</a></strong></center></p><p>The pack is also available via the MCGLauncher, a custom launcher maintained by Chen, based off the SNKLauncher.</p><p>The server is located at <strong><em>cerd.noip.me</em></strong>. It's included in the pack's multiplayer list by default.</p>
+<p><center><strong><a href="https://github.com/cerdra/yolo-ninja/blob/master/modlist.md">Modlist</a> • <a href="https://github.com/cerdra/yolo-ninja/blob/master/changelog.md">Changelog</a></strong></center></p><p>The pack is also available via the MCGLauncher, a custom launcher maintained by Chen, based off the <a href="https://github.com/skcraft/launcher">SKcraft Launcher</a>, an open source launcher.</p><p>The server is located at <strong><em>cerd.noip.me</em></strong>. It's included in the pack's multiplayer list by default.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a> </h3>
