add maid mob sound description

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <h3>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pack Information</h3>
 
-<p><center><strong><a href="https://github.com/cerdra/isochron/blob/master/modlist.md">Modlist</a> • <a href="https://github.com/cerdra/isochron/blob/master/changelog.md">Changelog</a></strong></center></p><p>The pack is also available via the MCGLauncher, a custom launcher maintained by Chen, based off the <a href="https://github.com/skcraft/launcher">SKcraft Launcher</a>, an open source launcher.</p><p>The <strong><em>Isochron</em></strong> server is located at <strong><em>cerd.noip.me</em></strong>. It's included in the pack's multiplayer list by default.</p>
+<p><center><strong><a href="https://github.com/cerdra/isochron/blob/master/modlist.md">Modlist</a> • <a href="https://github.com/cerdra/isochron/blob/master/changelog.md">Changelog</a></strong></center></p><p><strong>Please note: if you grab the pack for MultiMC, you need the </strong><a href="http://protect.moe/public/littlemaidmobxsounds.zip">LittleMaidMob sounds</a><strong> to hear them!</strong> This will be fixed in the next version of the pack. For now, just unzip that zip into your mods folder.</p><p>The pack is also available via the MCGLauncher, a custom launcher maintained by Chen, based off the <a href="https://github.com/skcraft/launcher">SKcraft Launcher</a>, an open source launcher.</p><p>The <strong><em>Isochron</em></strong> server is located at <strong><em>cerd.noip.me</em></strong>. It's included in the pack's multiplayer list by default.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a> </h3>
